# Stress_eleves

./: .gitignore  .nojekyll  Dockerfile  LICENSE  README.md  TP.ipynb  _quarto.yml  index.html  index.qmd  main.py  pyproject.toml  robots.txt  search.json  sitemap.xml  slides.html  slides.qmd  stress.csv  styles.css
.github/workflows/: prod.yaml  publish.yaml  test.yaml  website.yaml
_freeze/models/random/execute-results/: html.json
data/raw/: metadata.json  stress_latest.parquet
models/: boosting.html  boosting.qmd  lasso.html  lasso.qmd  random.html  random.qmd  random.quarto_ipynb_1  random.quarto_ipynb_2  reglog.html  reglog.qmd  reglog.quarto_ipynb_1
notebooks/: TP.html  TP.ipynb
reports/tables/: cart_feature_importance.csv  lasso_best_c.csv  lasso_cv_coefficients.csv  lasso_metrics.csv  lasso_selected_variables.csv  logistic_metrics.csv  logistic_multiclass_coefficients.csv  logistic_ovr_coefficients.csv  performance_boosting.csv  performance_random_forest.csv  performance_trees.csv  random_forest_feature_importance.csv  roc_logistic_summary.csv  tree_model_comparison.csv
scripts/: ingest.py
site_libs/bootstrap/: bootstrap-f4943edfcd3b274f649cef36d19b3b26.min.css
src/: config.py  evaluation.py  features.py  models.py
