[project]
name = "stress-eleves"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "argparse>=1.4.0",
    "duckdb>=1.5.1",
    "jupyter>=1.1.1",
    "logging>=0.4.9.6",
    "matplotlib>=3.10.8",
    "numpy>=2.4.4",
    "pandas>=3.0.2",
    "pylint>=4.0.5",
    "scikit-learn>=1.8.0",
    "scipy>=1.17.1",
]
